--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
     <title>登录 - WeChatBot</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/5NXjvbkf/5-E0-B50824145-F992-ABCD90247-E6933-BB.png">
 <!-----------------------------------------------------------------------
 - Copyright (C) 2025, iwyxdxl
 - Licensed under GNU GPL-3.0 or higher, see the LICENSE file for details.
